--- a/src/index.css
+++ b/src/index.css
@@ -23,15 +23,6 @@ a:hover {
   color: #535bf2;
 }
 
-body {
-  margin: 0;
-  
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
-  width: 100%;
-  height: 100%;
-}
 
 h1 {
   font-size: 3.2em;
